WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
12915
REGRESSION: XMLHttpRequest.abort() does not stop loading
https://bugs.webkit.org/show_bug.cgi?id=12915
Summary
REGRESSION: XMLHttpRequest.abort() does not stop loading
Alexey Proskuryakov
Reported
2007-02-27 13:09:31 PST
To reproduce, just open the bug URL.Loading should finish quickly, but in ToT, it takes 5 seconds (which is a timeout with which XMLHttpRequest response is generated in this test). Note: This report is _not_ about the test failing - that may actually be perfectly OK, as it also fails in Firefox.
Attachments
Add attachment
proposed patch, testcase, etc.
Maciej Stachowiak
Comment 1
2007-02-27 19:36:59 PST
<
rdar://problem/5028165
>
Anders Carlsson
Comment 2
2007-03-04 15:44:51 PST
Committed revision 19955.
Anne van Kesteren
Comment 3
2007-03-21 05:25:54 PDT
FYI: This testcase is passed by Opera 9.x, Firefox 2/3 and Internet Explorer 7.
Alexey Proskuryakov
Comment 4
2007-03-21 06:57:09 PDT
Thanks Anne, the test passes in Firefox 2.0.0.1 for me, too - not sure why I was getting different results before. I have filed
bug 13141
for this.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug