LayoutTests:

Reviewed by Darin.

        <rdar://problem/5028165>
        http://bugs.webkit.org/show_bug.cgi?id=12915
        REGRESSION: XMLHttpRequest.abort() does not stop loading (12915)

        * http/tests/xmlhttprequest/abort-should-cancel-load-expected.txt: Added.
        * http/tests/xmlhttprequest/abort-should-cancel-load.html: Added.

WebCore:

        Reviewed by Darin.

        <rdar://problem/5028165>
        http://bugs.webkit.org/show_bug.cgi?id=12915
        REGRESSION: XMLHttpRequest.abort() does not stop loading (12915)

        * loader/DocumentLoader.cpp:
        (WebCore::DocumentLoader::stopLoading):
        Save the value of m_loading since calling FrameLoader::stopLoading could set it to false.

        * loader/SubresourceLoader.cpp:
        (WebCore::SubresourceLoader::didCancel):
        * loader/SubresourceLoader.h:
        Get rid of didCancel now, it's not needed anymore.

        * xml/xmlhttprequest.cpp:
        (WebCore::XMLHttpRequest::abort):
        Call cancel() instead of stopLoading(). Also, set m_aborted to true so the XMLHttpRequest object
        won't be dereferenced in didFail when aborting.



Canonical link: https://commits.webkit.org/16778@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@19955 268f45cc-cd09-0410-ab3c-d52691b4dbfc